chore: update lab train tokenizers

--- a/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
+++ b/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
@@ -45,33 +45,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading metadata: 100%|██████████| 1.34k/1.34k [00:00<00:00, 984kB/s]\n",
-      "Downloading readme: 100%|██████████| 22.0/22.0 [00:00<00:00, 13.0kB/s]\n"
+      "/home/yj.lee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading metadata: 100%|██████████| 1.34k/1.34k [00:00<00:00, 5.92MB/s]\n",
+      "Downloading readme: 100%|██████████| 22.0/22.0 [00:00<00:00, 110kB/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset wikipedia/20221001.ko (download: 690.36 MiB, generated: 1.22 GiB, post-processed: Unknown size, total: 1.89 GiB) to /home/yjlee/.cache/huggingface/datasets/lcw99___parquet/lcw99--wikipedia-korean-20221001-91be346ce97972f5/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
+      "Downloading and preparing dataset wikipedia/20221001.ko (download: 690.36 MiB, generated: 1.22 GiB, post-processed: Unknown size, total: 1.89 GiB) to /home/yj.lee/.cache/huggingface/datasets/lcw99___parquet/lcw99--wikipedia-korean-20221001-91be346ce97972f5/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data: 100%|██████████| 375M/375M [00:04<00:00, 75.3MB/s]\n",
-      "Downloading data: 100%|██████████| 188M/188M [00:02<00:00, 78.5MB/s]\n",
-      "Downloading data: 100%|██████████| 162M/162M [00:18<00:00, 8.96MB/s]\n",
-      "Downloading data files: 100%|██████████| 1/1 [01:04<00:00, 64.52s/it]\n",
-      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 515.65it/s]\n",
+      "Downloading data: 100%|██████████| 375M/375M [00:24<00:00, 15.1MB/s]\n",
+      "Downloading data: 100%|██████████| 188M/188M [00:13<00:00, 14.3MB/s]\n",
+      "Downloading data: 100%|██████████| 162M/162M [00:22<00:00, 7.24MB/s]\n",
+      "Downloading data files: 100%|██████████| 1/1 [01:10<00:00, 70.74s/it]\n",
+      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 799.22it/s]\n",
       "                                                                                          \r"
      ]
     },
@@ -79,14 +85,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset parquet downloaded and prepared to /home/yjlee/.cache/huggingface/datasets/lcw99___parquet/lcw99--wikipedia-korean-20221001-91be346ce97972f5/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
+      "Dataset parquet downloaded and prepared to /home/yj.lee/.cache/huggingface/datasets/lcw99___parquet/lcw99--wikipedia-korean-20221001-91be346ce97972f5/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 75.55it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 117.21it/s]\n"
      ]
     }
    ],
@@ -108,12 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# change this to your own path\n",
-    "wiki_filepath = \"./tmp/wiki.txt\"\n",
+    "wiki_filepath = \"../tmp/wiki.txt\"\n",
     "\n",
     "text = \"\\n\".join(article[\"text\"] for article in wiki[\"train\"])\n",
     "with open(wiki_filepath, \"w\", encoding=\"utf-8\") as f:\n",
@@ -154,7 +160,7 @@
     "\n",
     "\n",
     "# change this to your own path\n",
-    "bpe_tokenizer_path = \"./tmp/bpe_tokenizer.json\"\n",
+    "bpe_tokenizer_path = \"../tmp/bpe_tokenizer.json\"\n",
     "\n",
     "tokenizer = Tokenizer(BPE())\n",
     "tokenizer.pre_tokenizer = Whitespace()\n",
@@ -179,7 +185,7 @@
     "from tokenizers.models import WordPiece\n",
     "\n",
     "# change this to your own path\n",
-    "wordpiece_tokenizer_path = \"./tmp/wordpiece_tokenizer.json\"\n",
+    "wordpiece_tokenizer_path = \"../tmp/wordpiece_tokenizer.json\"\n",
     "\n",
     "tokenizer = Tokenizer(WordPiece())\n",
     "tokenizer.train([wiki_filepath])\n",
@@ -211,7 +217,7 @@
     "from tokenizers.models import Unigram\n",
     "\n",
     "# change this to your own path\n",
-    "unigram_tokenizer_path = \"./tmp/unigram_tokenizer.json\"\n",
+    "unigram_tokenizer_path = \"../tmp/unigram_tokenizer.json\"\n",
     "\n",
     "tokenizer = Tokenizer(Unigram())\n",
     "tokenizer.train([wiki_filepath])\n",
@@ -361,7 +367,7 @@
    "source": [
     "import sentencepiece as spm\n",
     "\n",
-    "sentencepiece_tokenizer_path = \"./tmp/sentencepiece_tokenizer.model\"\n",
+    "sentencepiece_tokenizer_path = \"../tmp/sentencepiece_tokenizer.model\"\n",
     "num_threads = 1\n",
     "\n",
     "spm.SentencePieceTrainer.train(\n",
@@ -401,10 +407,10 @@
     "\n",
     "sample_sentence = \"안녕하세요. 이 문장은 토크나이저를 테스트하기 위한 샘플 문장입니다.\"\n",
     "\n",
-    "bpe_tokenizer_path = \"./tmp/bpe_tokenizer.json\"\n",
-    "wordpiece_tokenizer_path = \"./tmp/wordpiece_tokenizer.json\"\n",
-    "unigram_tokenizer_path = \"./tmp/unigram_tokenizer.json\"\n",
-    "sentencepiece_tokenizer_path = \"./tmp/sentencepiece_tokenizer.model\"\n",
+    "bpe_tokenizer_path = \"../tmp/bpe_tokenizer.json\"\n",
+    "wordpiece_tokenizer_path = \"../tmp/wordpiece_tokenizer.json\"\n",
+    "unigram_tokenizer_path = \"../tmp/unigram_tokenizer.json\"\n",
+    "sentencepiece_tokenizer_path = \"../tmp/sentencepiece_tokenizer.model\"\n",
     "\n",
     "# BPE\n",
     "bpe = Tokenizer.from_file(bpe_tokenizer_path)\n",
@@ -454,14 +460,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from tokenizers import Tokenizer\n",
     "from tokenizers.models import BPE\n",
     "from tokenizers.pre_tokenizers import Whitespace\n",
     "from tokenizers.trainers import BpeTrainer\n",
+    "\n",
+    "wiki_filepath = \"../tmp/wiki.txt\"\n",
     "\n",
     "tokenizer = Tokenizer(BPE())\n",
     "tokenizer.pre_tokenizer = Whitespace()\n",
@@ -471,8 +489,8 @@
     "    min_frequency=2,\n",
     "    special_tokens=[\"<s>\", \"<pad>\", \"</s>\", \"<unk>\", \"<mask>\"],\n",
     ")\n",
-    "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"bpe_gpt_tokenizer.json\")\n"
+    "tokenizer.train([wiki_filepath], trainer)\n",
+    "tokenizer.save(\"../tmp/bpe_gpt_tokenizer.json\")\n"
    ]
   },
   {
@@ -493,13 +511,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BertNormalizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtokenizers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtrainers\u001b[39;00m \u001b[39mimport\u001b[39;00m WordPieceTrainer\n\u001b[1;32m      5\u001b[0m tokenizer \u001b[39m=\u001b[39m Tokenizer(WordPiece(unk_token\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m[UNK]\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m----> 6\u001b[0m tokenizer\u001b[39m.\u001b[39mnormalizer \u001b[39m=\u001b[39m BertNormalizer(lowercase\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m trainer \u001b[39m=\u001b[39m WordPieceTrainer(\n\u001b[1;32m      9\u001b[0m     vocab_size\u001b[39m=\u001b[39m\u001b[39m30000\u001b[39m, special_tokens\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39m[PAD]\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m[UNK]\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m[CLS]\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m[SEP]\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m[MASK]\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     11\u001b[0m tokenizer\u001b[39m.\u001b[39mtrain([wiki_filepath], trainer)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BertNormalizer' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from tokenizers import Tokenizer\n",
     "from tokenizers.models import WordPiece\n",
     "from tokenizers.trainers import WordPieceTrainer\n",
+    "from tokenizers.normalizers import BertNormalizer\n",
     "\n",
     "tokenizer = Tokenizer(WordPiece(unk_token=\"[UNK]\"))\n",
     "tokenizer.normalizer = BertNormalizer(lowercase=False)\n",
@@ -507,8 +538,8 @@
     "trainer = WordPieceTrainer(\n",
     "    vocab_size=30000, special_tokens=[\"[PAD]\", \"[UNK]\", \"[CLS]\", \"[SEP]\", \"[MASK]\"]\n",
     ")\n",
-    "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"wordpiece_bert_tokenizer.json\")\n"
+    "tokenizer.train([wiki_filepath], trainer)\n",
+    "tokenizer.save(\"../tmp/wordpiece_bert_tokenizer.json\")\n"
    ]
   },
   {
@@ -577,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
