--- a/book/lectures/nlp_deep/training/lab-finetune-mlm.ipynb
+++ b/book/lectures/nlp_deep/training/lab-finetune-mlm.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab: Finetuining a Masked Language Model\n",
+    "# Lab: Finetuining a MLM\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preparing the Environment\n",
+    "## Preparing the Environment\n",
     "\n",
     "Before we start, we need to set up our working environment in Google Colab. This involves installing necessary libraries and setting up GPU for our computations.\n",
     "\n",
