docs(deep-nlp): update lab for pretraining CLM

--- a/book/lectures/nlp_deep/training/lab-pretrain-clm.ipynb
+++ b/book/lectures/nlp_deep/training/lab-pretrain-clm.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -364,25 +364,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map:  63%|██████▎   | 405000/645867 [07:46<03:19, 1209.72 examples/s]"
+      "Map:   3%|▎         | 21000/645867 [00:53<21:02, 494.98 examples/s]"
      ]
     }
    ],
    "source": [
+    "# Tokenization\n",
     "def tokenize_function(examples):\n",
-    "    return tokenizer(examples[\"text\"])\n",
+    "    return tokenizer(examples[\"text\"], truncation=False, padding=False)\n",
     "\n",
     "\n",
-    "# Tokenize the dataset\n",
-    "tokenized_dataset = dataset.map(tokenize_function, batched=True)\n",
-    "tokenized_dataset.features"
+    "tokenized_dataset = dataset.map(\n",
+    "    tokenize_function, batched=True, remove_columns=[\"text\"]\n",
+    ")"
    ]
   },
   {
@@ -403,24 +404,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_function(examples):\n",
-    "    # Concatenate all texts.\n",
-    "    concatenated_examples = {k: sum(examples[k], []) for k in examples.keys()}\n",
-    "    total_length = len(concatenated_examples[list(examples.keys())[0]])\n",
-    "    # We drop the small remainder, we could add padding if the model supported it instead of this drop, you can\n",
-    "    # customize this part to your needs.\n",
-    "    total_length = (total_length // block_size) * block_size\n",
-    "    # Split by chunks of max_len.\n",
+    "# Formatting\n",
+    "block_size = 128  # or any number suitable to your context\n",
+    "\n",
+    "\n",
+    "def group_texts(examples):\n",
+    "    # Concatenate all 'input_ids'\n",
+    "    concatenated_examples = sum(examples[\"input_ids\"], [])\n",
+    "    total_length = len(concatenated_examples)\n",
+    "    # Organize into sequences of fixed length\n",
+    "    sequences = [\n",
+    "        concatenated_examples[i : i + block_size]\n",
+    "        for i in range(0, total_length, block_size)\n",
+    "    ]\n",
     "    result = {\n",
-    "        k: [t[i : i + block_size] for i in range(0, total_length, block_size)]\n",
-    "        for k, t in concatenated_examples.items()\n",
+    "        \"input_ids\": sequences,\n",
+    "        # Shift the labels for CLM\n",
+    "        \"labels\": [sequence[1:] + [tokenizer.eos_token_id] for sequence in sequences],\n",
     "    }\n",
-    "    result[\"labels\"] = result[\"input_ids\"].copy()\n",
     "    return result\n",
     "\n",
     "\n",
-    "block_size = 128  # feel free to change to suit your training needs\n",
-    "tokenized_dataset = tokenized_dataset.map(format_function, batched=True)"
+    "tokenized_dataset = tokenized_dataset.map(\n",
+    "    group_texts,\n",
+    "    batched=True,\n",
+    "    batch_size=1000,  # or any number suitable to your context\n",
+    ")"
    ]
   },
   {
