docs(deep-nlp): update lab for pretraining MLM

--- a/book/lectures/nlp_deep/training/lab-pretrain-mlm.ipynb
+++ b/book/lectures/nlp_deep/training/lab-pretrain-mlm.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab: Pretraining LMs with MLM\n",
+    "# Lab: Pretraining LMs - MLM\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -14,8 +14,6 @@
     "BERT (Bidirectional Encoder Representations from Transformers) is a transformer-based machine learning technique for natural language processing (NLP) pre-training developed by Google. It was created and published in 2018 by Jacob Devlin and his colleagues from Google. Unlike the traditional approach of training language models in either a left-to-right or right-to-left direction, BERT is trained bidirectionally. This bidirectional training approach allows the model to understand the context of a word based on all of its surroundings (left and right of the word).\n",
     "\n",
     "The major characteristic of BERT is its use of MLM during pretraining. In MLM, a random subset of the input tokens is masked, and the objective for the model is to predict the original vocabulary id of the masked word, given its context. Unlike next sentence prediction, MLM can be defined over any input sequence and doesn't require explicitly labeled pairs of sentences as input.\n",
-    "\n",
-    "## Summary of the Procedure\n",
     "\n",
     "The procedure for training our own BERT model involves the following steps:\n",
     "\n",
