refactor(lectures): update syntax in sequenceDiagram of vcs lesson

--- a/book/lectures/softeng/vcs/02_fixing_mistakes.ipynb
+++ b/book/lectures/softeng/vcs/02_fixing_mistakes.ipynb
@@ -522,25 +522,25 @@
     ":align: center\n",
     "\n",
     "sequenceDiagram\n",
-    "  participant \"Jim's repo\" as R\n",
-    "  participant \"Jim's index\" as I\n",
-    "  participant Jim as J\n",
+    "  participant R as Jim's repo\n",
+    "  participant I as Jim's index\n",
+    "  participant J as Jim\n",
     "\n",
-    "  note right of J: git revert HEAD~\n",
+    "  Note over J: git revert HEAD~\n",
     "  J->>R: Add new commit reversing change\n",
     "  R->>I: Update staging area to reverted version\n",
     "  I->>J: Update file to reverted version\n",
     "\n",
-    "  note right of J: vim test.md\n",
-    "  note right of J: git commit -am \"Add another mistake\"\n",
+    "  Note over J: vim test.md\n",
+    "  Note over J: git commit -am \"Add another mistake\"\n",
     "  J->>I: Add mistake\n",
     "  I->>R: Add mistake\n",
     "\n",
-    "  note right of J: git reset HEAD~\n",
+    "  Note over J: git reset HEAD~\n",
     "  J->>R: Delete mistaken commit\n",
     "  R->>I: Update staging area to reset commit\n",
     "\n",
-    "  note right of J: git checkout test.md\n",
+    "  Note over J: git checkout test.md\n",
     "  R->>J: Update file to reverted version\n",
     "\n",
     "```\n"
