--- a/book/lectures/softeng/vcs/03_publishing.ipynb
+++ b/book/lectures/softeng/vcs/03_publishing.ipynb
@@ -231,14 +231,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with multiple files\n"
+    "## Working with multiple files\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some new content\n",
+    "### Some new content\n",
     "\n",
     "So far, we've only worked with one file. Let's add another:\n"
    ]
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Git will not by default commit your new file\n"
+    "### Git will not by default commit your new file\n"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tell git about the new file\n"
+    "### Tell git about the new file\n"
    ]
   },
   {
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Changing two files at once\n"
+    "## Changing two files at once\n"
    ]
   },
   {
