--- a/book/lectures/softeng/vcs/04_collaboration.ipynb
+++ b/book/lectures/softeng/vcs/04_collaboration.ipynb
@@ -1459,7 +1459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Levels of Git\n"
+    "## The Levels of Git\n"
    ]
   },
   {
