refactor(lecture-notes): update title formatting

--- a/book/lectures/softeng/vcs/00_introduction.ipynb
+++ b/book/lectures/softeng/vcs/00_introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to version control\n"
+    "# 0. Introduction to version control\n"
    ]
   },
   {
