--- a/book/lectures/softeng/vcs/01_solo_work_with_git.ipynb
+++ b/book/lectures/softeng/vcs/01_solo_work_with_git.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solo work with git\n"
+    "# 1. Solo work with git\n"
    ]
   },
   {
