--- a/book/lectures/softeng/vcs/02_fixing_mistakes.ipynb
+++ b/book/lectures/softeng/vcs/02_fixing_mistakes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fixing mistakes\n"
+    "# 2. Fixing mistakes\n"
    ]
   },
   {
