refactor(lectures): change titles to sub-titles

--- a/book/lectures/softeng/vcs/08_advanced_git_concepts.ipynb
+++ b/book/lectures/softeng/vcs/08_advanced_git_concepts.ipynb
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ignoring files\n"
+    "## Ignoring files\n"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning your directory\n"
+    "## Cleaning your directory\n"
    ]
   },
   {
