refactor(lectures): change heading level for "Squashing" in vcs/10_rebasing.ipynb

--- a/book/lectures/softeng/vcs/10_rebasing.ipynb
+++ b/book/lectures/softeng/vcs/10_rebasing.ipynb
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Squashing\n",
+    "## Squashing\n",
     "\n",
     "A second way to use the `git rebase` command is to rebase your work on top of one of _your own_ earlier commits,\n",
     "in interactive mode (`-i`). A common use of this is to \"squash\" several commits that should really be one, i.e. combine them into a single commit that contains all their changes:\n"
