--- a/_sources/lectures/softeng/vcs/01_solo_work_with_git.ipynb
+++ b/_sources/lectures/softeng/vcs/01_solo_work_with_git.ipynb
@@ -565,6 +565,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## The Levels of Git\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{mermaid}\n",
+    ":align: center\n",
+    "\n",
+    "sequenceDiagram\n",
+    "  participant WD as Working Directory\n",
+    "  participant SA as Staging Area\n",
+    "  participant LR as Local Repository\n",
+    "\n",
+    "  Note over WD: git add\n",
+    "  WD->>SA: Stage changes\n",
+    "\n",
+    "  Note over SA: git commit\n",
+    "  SA->>LR: Commit staged changes\n",
+    "\n",
+    "  Note over WD: git commit -a\n",
+    "  WD->>LR: Stage and commit changes\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Correcting mistakes\n"
    ]
   },
@@ -843,6 +874,53 @@
    "source": [
     "%%bash\n",
     "git log --oneline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Git Solo Workflow\n",
+    "\n",
+    "We can make a diagram that summarises the above story:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{mermaid}\n",
+    ":align: center\n",
+    "\n",
+    "sequenceDiagram\n",
+    "  participant J as Jim\n",
+    "  participant I as Jim's index\n",
+    "  participant R as Jim's repo\n",
+    "\n",
+    "  Note over J: vim test.md\n",
+    "\n",
+    "  Note over J: git init\n",
+    "  J->>R: Create repository\n",
+    "\n",
+    "  Note over J: git add test.md\n",
+    "  J->>I: Add content of test.md\n",
+    "\n",
+    "  Note over J: git commit\n",
+    "  I->>R: Commit content of test.md\n",
+    "\n",
+    "  Note over J: vim test.md\n",
+    "\n",
+    "  Note over J: git add --update\n",
+    "  J->>I: Update content of test.md\n",
+    "\n",
+    "  Note over J: git commit -m \"Add a lie\"\n",
+    "  I->>R: Commit change to test.md\n",
+    "\n",
+    "  Note over J: vim test.md\n",
+    "  Note over J: git commit -am \"Change title\"\n",
+    "  J->>R: Add and commit change to test.md (and all tracked files)\n",
+    "\n",
+    "```\n"
    ]
   },
   {
