--- a/_sources/lectures/softeng/vcs/02_fixing_mistakes.ipynb
+++ b/_sources/lectures/softeng/vcs/02_fixing_mistakes.ipynb
@@ -518,6 +518,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can add this to our diagram:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{mermaid}\n",
+    ":align: center\n",
+    "\n",
+    "sequenceDiagram\n",
+    "  participant WD as Working Directory\n",
+    "  participant SA as Staging Area\n",
+    "  participant LR as Local Repository\n",
+    "\n",
+    "  Note over WD: git add\n",
+    "  WD->>SA: Stage changes\n",
+    "\n",
+    "  Note over SA: git commit\n",
+    "  SA->>LR: Commit staged changes\n",
+    "\n",
+    "  Note over WD: git commit -a\n",
+    "  WD->>LR: Stage and commit changes\n",
+    "\n",
+    "  Note over LR: git checkout\n",
+    "  LR->>WD: Update to specified state\n",
+    "\n",
+    "  Note over LR: git reset\n",
+    "  LR->>SA: Reset staging area to commit\n",
+    "\n",
+    "  Note over LR: git reset --hard\n",
+    "  LR->>WD: Reset to commit & update files\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can add it to Jim’s story:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```{mermaid}\n",
     ":align: center\n",
     "\n",
