refactor(softeng/vcs): update directory variables in solo_work_with_git

--- a/book/lectures/softeng/vcs/01_solo_work_with_git.ipynb
+++ b/book/lectures/softeng/vcs/01_solo_work_with_git.ipynb
@@ -51,11 +51,12 @@
     "\n",
     "print(f\"Drive dir: {drive_dir}\")\n",
     "\n",
-    "git_example_dir = os.path.join(drive_dir, \"learning_git\", \"git_example\")\n",
+    "git_dir = os.path.join(drive_dir, \"learning_git\")\n",
+    "working_dir = os.path.join(git_dir, \"git_example\")\n",
     "\n",
-    "if os.path.exists(git_example_dir):\n",
-    "    print(f\"Git example directory: {git_example_dir}\")\n",
-    "    os.chdir(git_example_dir)\n",
+    "if os.path.exists(working_dir):\n",
+    "    print(f\"Git example directory: {working_dir}\")\n",
+    "    os.chdir(working_dir)\n",
     "else:\n",
     "    print(\"Start from the beginning\")"
    ]
