refactor(lectures): add colab support for the branches lecture

--- a/book/lectures/softeng/vcs/07_branches.ipynb
+++ b/book/lectures/softeng/vcs/07_branches.ipynb
@@ -21,14 +21,40 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running on colab\n",
+      "Drive dir: /mnt/nvme1n1p2/home/yj.lee/workspace/projects/lecture/book/lectures/softeng/vcs/drive/MyDrive\n",
+      "Git example directory: /mnt/nvme1n1p2/home/yj.lee/workspace/projects/lecture/book/lectures/softeng/vcs/drive/MyDrive/learning_git/git_example\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
-    "top_dir = os.getcwd()\n",
-    "git_dir = os.path.join(top_dir, \"learning_git\")\n",
+    "try:\n",
+    "    from google.colab import drive  # type: ignore\n",
+    "\n",
+    "    drive.mount(\"/content/drive\")\n",
+    "    drive_dir = \"/content/drive/MyDrive\"\n",
+    "except ImportError:\n",
+    "    print(\"Not running on colab\")\n",
+    "    drive_dir = os.path.join(os.getcwd(), \"drive\", \"MyDrive\")\n",
+    "    os.makedirs(drive_dir, exist_ok=True)\n",
+    "\n",
+    "print(f\"Drive dir: {drive_dir}\")\n",
+    "\n",
+    "git_dir = os.path.join(drive_dir, \"learning_git\")\n",
     "working_dir = os.path.join(git_dir, \"git_example\")\n",
-    "os.chdir(working_dir)"
+    "\n",
+    "if os.path.exists(working_dir):\n",
+    "    print(f\"Git example directory: {working_dir}\")\n",
+    "    os.chdir(working_dir)\n",
+    "else:\n",
+    "    print(\"Start from the beginning\")"
    ]
   },
   {
