deploy: b260624498e3638ab9875b855bc884c52e311ced

--- a/_sources/lectures/softeng/vcs/00_introduction.ipynb
+++ b/_sources/lectures/softeng/vcs/00_introduction.ipynb
@@ -239,7 +239,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running on colab\n",
+      "Drive dir: /mnt/nvme1n1p2/home/yj.lee/workspace/projects/lecture/book/lectures/softeng/vcs/drive/MyDrive\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "try:\n",
+    "    from google.colab import drive  # type: ignore\n",
+    "\n",
+    "    drive.mount(\"/content/drive\")\n",
+    "    drive_dir = \"/content/drive/MyDrive\"\n",
+    "except ImportError:\n",
+    "    print(\"Not running on colab\")\n",
+    "    drive_dir = os.path.join(os.getcwd(), \"drive\", \"MyDrive\")\n",
+    "    os.makedirs(drive_dir, exist_ok=True)\n",
+    "\n",
+    "print(f\"Drive dir: {drive_dir}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "attributes": {
      "classes": [
@@ -248,12 +278,29 @@
      "id": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new git_example directory\n",
+      "Git example directory: /mnt/nvme1n1p2/home/yj.lee/workspace/projects/lecture/book/lectures/softeng/vcs/drive/MyDrive/learning_git/git_example\n"
+     ]
+    }
+   ],
    "source": [
-    "%%bash\n",
-    "rm -rf learning_git/git_example # Just in case it's left over from a previous session\n",
-    "mkdir -p learning_git/git_example\n",
-    "cd learning_git/git_example"
+    "git_example_dir = os.path.join(drive_dir, \"learning_git\", \"git_example\")\n",
+    "\n",
+    "if os.path.exists(git_example_dir):\n",
+    "    import shutil\n",
+    "\n",
+    "    print(\"Removing existing git_example directory\")\n",
+    "    shutil.rmtree(git_example_dir)\n",
+    "else:\n",
+    "    print(\"Creating new git_example directory\")\n",
+    "    os.makedirs(git_example_dir, exist_ok=True)\n",
+    "\n",
+    "print(f\"Git example directory: {git_example_dir}\")"
    ]
   },
   {
@@ -265,64 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/raid/cis/yjlee/workspace/projects/lecture/book/lectures/softeng/vcs/learning_git/git_example'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "top_dir = os.getcwd()\n",
-    "top_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/raid/cis/yjlee/workspace/projects/lecture/book/lectures/softeng/vcs/learning_git/git_example/learning_git'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "git_dir = os.path.join(top_dir, \"learning_git\")\n",
-    "git_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = os.path.join(git_dir, \"git_example\")"
+    "os.chdir(git_example_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/nvme1n1p2/home/yj.lee/workspace/projects/lecture/book/lectures/softeng/vcs/drive/MyDrive/learning_git/git_example\n"
+     ]
+    }
+   ],
    "source": [
-    "os.chdir(working_dir)"
+    "!pwd"
    ]
   },
   {
