fix(git-config): fix user name and email setup

--- a/book/lectures/softeng/vcs/00_introduction.ipynb
+++ b/book/lectures/softeng/vcs/00_introduction.ipynb
@@ -347,11 +347,22 @@
     "First, we should configure Git to know our name and email address:\n",
     "\n",
     "```bash\n",
-    "git config --global user.name \"YOUR NAME HERE\"\n",
-    "git config --global user.email \"yourname@example.com\"\n",
+    "git config user.name \"YOUR NAME HERE\"\n",
+    "git config user.email \"yourname@example.com\"\n",
     "```\n",
     "\n",
-    "Note that by using the `--global` flag, we are setting these options for all projects. To set them just for this project, use `--local` instead.\n"
+    "Use the `--global` flag, if you want to use the same name and email address for all your Git repositories.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "git config user.name \"YOUR NAME HERE\"\n",
+    "git config user.email \"yourname@example.com\"\n"
    ]
   },
   {
