refactor(vcs): update tutorial content

--- a/book/lectures/softeng/vcs/00_introduction.ipynb
+++ b/book/lectures/softeng/vcs/00_introduction.ipynb
@@ -340,79 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solo work\n",
-    "\n",
-    "### Configuring Git with your name and email\n",
-    "\n",
-    "First, we should configure Git to know our name and email address:\n",
-    "\n",
-    "```bash\n",
-    "git config user.name \"YOUR NAME HERE\"\n",
-    "git config user.email \"yourname@example.com\"\n",
-    "```\n",
-    "\n",
-    "Use the `--global` flag, if you want to use the same name and email address for all your Git repositories.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "git config user.name \"YOUR NAME HERE\"\n",
-    "git config user.email \"yourname@example.com\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now check that this worked\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "attributes": {
-     "classes": [
-      " Bash"
-     ],
-     "id": ""
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Young Joon Lee\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git config --get user.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "entelecheia@hotmail.com\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git config --get user.email"
+    "## Solo work\n"
    ]
   },
   {
@@ -495,6 +423,83 @@
    "source": [
     "%%bash\n",
     "git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuring Git with your name and email\n",
+    "\n",
+    "First, we should configure Git to know our name and email address:\n",
+    "\n",
+    "```bash\n",
+    "git config user.name \"YOUR NAME HERE\"\n",
+    "git config user.email \"yourname@example.com\"\n",
+    "```\n",
+    "\n",
+    "Use the `--global` flag, if you want to use the same name and email address for all your Git repositories.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "git config user.name \"YOUR NAME HERE\"\n",
+    "git config user.email \"yourname@example.com\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now check that this worked\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "attributes": {
+     "classes": [
+      " Bash"
+     ],
+     "id": ""
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Young Joon Lee\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git config --get user.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entelecheia@hotmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git config --get user.email"
    ]
   },
   {
