chore: update headings in nlm.ipynb and 10_monetary_shocks.ipynb

--- a/book/lectures/dsecon/fomc/10_monetary_shocks.ipynb
+++ b/book/lectures/dsecon/fomc/10_monetary_shocks.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monetary Policy Shocks\n",
+    "# Monetary Policy Shocks\n",
     "\n",
     "Christiano, Lawrence J., Martin Eichenbaum, and Charles L. Evans. 1999.\n",
     "\"Monetary Policy Shocks: What Have We Learned and to What End?\"\n"
