--- a/book/lectures/nlp_intro/embeddings/nlm.ipynb
+++ b/book/lectures/nlp_intro/embeddings/nlm.ipynb
@@ -6,7 +6,7 @@
    "id": "16570c80",
    "metadata": {},
    "source": [
-    "## Neural Language Models\n",
+    "# Neural Language Models\n",
     "\n",
     "Word embeddings were proposed by {cite}`bengio2003neural` as a way to represent words as vectors.\n",
     "\n",
