fix: Update URLs to use the correct domain for lectures
- Changed documentation URLs from `lecture.jeju.ai` to `lectures.jeju.ai` across multiple files including `.copier-config.yaml`, `pyproject.toml`, `README.md`, and others.
- Updated author and course links in the book configuration and index files to reflect the new domain.
- Ensured all references to the old domain are replaced for consistency and accuracy.

--- a/book/lectures/softeng/vcs/00_introduction.ipynb
+++ b/book/lectures/softeng/vcs/00_introduction.ipynb
@@ -145,7 +145,7 @@
     "The text files we create will use a simple \"wiki\" markup style called [markdown](http://daringfireball.net/projects/markdown/basics) to show formatting.\n",
     "This is the convention used in this file, too.\n",
     "\n",
-    "You can view the content of this file in the way Markdown renders it by looking on the [web](https://lecture.jeju.ai/lectures/softeng/vcs/00_introduction.html), and compare the [raw text](https://github.com/entelecheia/lecture/blob/main/book/lectures/softeng/vcs/00_introduction.ipynb).\n"
+    "You can view the content of this file in the way Markdown renders it by looking on the [web](https://lectures.jeju.ai/lectures/softeng/vcs/00_introduction.html), and compare the [raw text](https://github.com/entelecheia/lecture/blob/main/book/lectures/softeng/vcs/00_introduction.ipynb).\n"
    ]
   },
   {
